// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Displays a summary of the current items in the cart 1`] = `
.c0 {
  width: 100%;
  border-spacing: 0;
  background-color: #fafafa;
  padding: 1rem;
}

.c1 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  text-align: left;
}

.c3 {
  text-align: right;
  color: #b3b3b3;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-weight: normal;
}

.c4 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: initial;
}

.c6 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: 1px solid #e6e6e6;
}

.c5 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: initial;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  text-align: right;
  color: #3c3c3c;
}

.c7 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: 1px solid #e6e6e6;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  text-align: right;
  color: #3c3c3c;
}

.c2 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-weight: 700;
  color: #3c3c3c;
}

.c8 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-weight: 700;
  color: #3c3c3c;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <th
        className="c1"
      >
        <span
          className="c2"
        >
          Cart Summary
        </span>
      </th>
      <th
        className="c3"
      >
        3 items
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="c4"
      >
        Item total
      </td>
      <td
        className="c5"
      >
        $246.22
      </td>
    </tr>
    <tr>
      <td
        className="c4"
      >
        Shipping
      </td>
      <td
        className="c5"
      >
        3-5 Days
      </td>
    </tr>
    <tr>
      <td
        className="c4"
      >
        Tax
      </td>
      <td
        className="c5"
      >
        -
      </td>
    </tr>
    <tr>
      <td
        className="c6"
      >
        Order total
      </td>
      <td
        className="c7"
      >
        <span
          className="c8"
        >
          $300.424
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Displays a summary with FREE shipping 1`] = `
.c0 {
  width: 100%;
  border-spacing: 0;
  background-color: #fafafa;
  padding: 1rem;
}

.c1 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  text-align: left;
}

.c3 {
  text-align: right;
  color: #b3b3b3;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-weight: normal;
}

.c4 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: initial;
}

.c6 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: 1px solid #e6e6e6;
}

.c5 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: initial;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  text-align: right;
  color: #3c3c3c;
}

.c7 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: 1px solid #e6e6e6;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  text-align: right;
  color: #3c3c3c;
}

.c2 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-weight: 700;
  color: #3c3c3c;
}

.c8 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-weight: 700;
  color: #3c3c3c;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <th
        className="c1"
      >
        <span
          className="c2"
        >
          Cart Summary
        </span>
      </th>
      <th
        className="c3"
      >
        3 items
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="c4"
      >
        Item total
      </td>
      <td
        className="c5"
      >
        $246.22
      </td>
    </tr>
    <tr>
      <td
        className="c4"
      >
        Shipping
      </td>
      <td
        className="c5"
      >
        FREE
      </td>
    </tr>
    <tr>
      <td
        className="c4"
      >
        Tax
      </td>
      <td
        className="c5"
      >
        -
      </td>
    </tr>
    <tr>
      <td
        className="c6"
      >
        Order total
      </td>
      <td
        className="c7"
      >
        <span
          className="c8"
        >
          $300.424
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Displays a summary with applied discount 1`] = `
.c0 {
  width: 100%;
  border-spacing: 0;
  background-color: #fafafa;
  padding: 1rem;
}

.c1 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  text-align: left;
}

.c3 {
  text-align: right;
  color: #b3b3b3;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-weight: normal;
}

.c4 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: initial;
}

.c7 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: 1px solid #e6e6e6;
}

.c5 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: initial;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  text-align: right;
  color: #3c3c3c;
}

.c8 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: 1px solid #e6e6e6;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  text-align: right;
  color: #3c3c3c;
}

.c2 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-weight: 700;
  color: #3c3c3c;
}

.c6 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  color: #0db781;
  font-weight: 700;
}

.c9 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-weight: 700;
  color: #3c3c3c;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <th
        className="c1"
      >
        <span
          className="c2"
        >
          Cart Summary
        </span>
      </th>
      <th
        className="c3"
      >
        3 items
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="c4"
      >
        Item total
      </td>
      <td
        className="c5"
      >
        $246.22
      </td>
    </tr>
    <tr>
      <td
        className="c4"
      >
        Shipping
      </td>
      <td
        className="c5"
      >
        3-5 Days
      </td>
    </tr>
    <tr>
      <td
        className="c4"
      >
        Promo code applied
      </td>
      <td
        className="c5"
      >
        <span
          className="c6"
        >
          -$80.42
        </span>
      </td>
    </tr>
    <tr>
      <td
        className="c4"
      >
        Tax
      </td>
      <td
        className="c5"
      >
        -
      </td>
    </tr>
    <tr>
      <td
        className="c7"
      >
        Order total
      </td>
      <td
        className="c8"
      >
        <span
          className="c9"
        >
          $300.424
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Displays a summary with calculated taxes 1`] = `
.c0 {
  width: 100%;
  border-spacing: 0;
  background-color: #fafafa;
  padding: 1rem;
}

.c1 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  text-align: left;
}

.c3 {
  text-align: right;
  color: #b3b3b3;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-weight: normal;
}

.c4 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: initial;
}

.c6 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: 1px solid #e6e6e6;
}

.c5 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: initial;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  text-align: right;
  color: #3c3c3c;
}

.c7 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  padding: 1rem 0;
  color: #3c3c3c;
  border-top: 1px solid #e6e6e6;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  text-align: right;
  color: #3c3c3c;
}

.c2 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-weight: 700;
  color: #3c3c3c;
}

.c8 {
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-weight: 700;
  color: #3c3c3c;
}

<table
  className="c0"
>
  <thead>
    <tr>
      <th
        className="c1"
      >
        <span
          className="c2"
        >
          Cart Summary
        </span>
      </th>
      <th
        className="c3"
      >
        3 items
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td
        className="c4"
      >
        Item total
      </td>
      <td
        className="c5"
      >
        $246.22
      </td>
    </tr>
    <tr>
      <td
        className="c4"
      >
        Shipping
      </td>
      <td
        className="c5"
      >
        3-5 Days
      </td>
    </tr>
    <tr>
      <td
        className="c4"
      >
        Tax
      </td>
      <td
        className="c5"
      >
        $24.88
      </td>
    </tr>
    <tr>
      <td
        className="c6"
      >
        Order total
      </td>
      <td
        className="c7"
      >
        <span
          className="c8"
        >
          $300.424
        </span>
      </td>
    </tr>
  </tbody>
</table>
`;
